--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = rofi -i -show drun -modi drun -show-icons
 
 
 #################
@@ -46,8 +46,8 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waypaper --restore & xremap ~/.config/xremap/config.yml
-exec-once = ~/Applications/Hyperland-libs/Waybar/build/waybar & swaync & hypridle
+exec-once = waypaper --restore & xremap .config/xremap/config.yml
+exec-once = waybar & swaync & hypridle
 
 
 #############################
@@ -212,7 +212,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, K, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
