--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor =
-    path = /home/Galoma/Pictures/wallpappers/lockScreen/lock2.png   # only png supported for now
+    path = $HOME/.config/wallpappers/lockScreen/lock2.png   # only png supported for now
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
