--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,3 +12,5 @@ bold_italic_font 	MesloGS Nerd Font Mono
 background_opacity	0.75
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
+
+enable_audio_bell no
