--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -122,6 +122,7 @@ animations {
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
+    bezier = overshot, 0.05, 1.0, 0.1, 1.02
 
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
@@ -136,9 +137,8 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 6, overshot, slide
+    animation = specialWorkspace, 1, 3, quick, slidefadevert
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
