--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,6 +48,7 @@ $menu = rofi -i -show drun -modi drun -show-icons
 # exec-once = nm-applet &
 exec-once = waypaper --restore & xremap .config/xremap/config.yml
 exec-once = waybar & swaync & hypridle
+exec-once = hyprswitch init --show-title &
 
 
 #############################
@@ -244,6 +245,11 @@ bind = $mainMod, Q, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, Q, exec, hyprshot -m region --clipboard-only --freeze
 bind = , PRINT, exec, hyprshot -m window --clipboard-only
 bind = SHIFT, PRINT, exec, hyprshot -m window
+
+# Hyperswitch bind
+# Keyboard (reverse = grave / ` ): Press comand + $key(tab) to open the GUI (and switch to next window), hold comand, press $key(tab) repeatedly to switch to the next window, press SHIFT to switch backwards, release comand to switch
+bind = $mainMod, tab, exec, hyprswitch gui --mod-key super --key tab --close mod-key-release --reverse-key=mod=SHIFT && hyprswitch dispatch
+bind = $mainMod SHIFT, tab, exec, hyprswitch gui --mod-key super --key tab --close mod-key-release --reverse-key=mod=SHIFT && hyprswitch dispatch -r
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
