--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = rofi -i -show drun -modi drun -show-icons
+$menu = $HOME/.config/rofi/launchers/type-6/launcher.sh
 
 
 #################
