--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -151,7 +151,7 @@
 		// "interface": "wlp2*", // (Optional) To force the use of this interface
 		"interval": 1,
 		"format-wifi": "  {bandwidthTotalBytes:>2}",
-		"format-ethernet": "{ipaddr}/{cidr} ",
+		"format-ethernet": "{ipaddr}/{cidr} 󰈀",
 		"tooltip-format-wifi": " {ipaddr} ({signalStrength}%)",
 		"tooltip-format": "{ifname} via {gwaddr} ",
 		"format-linked": "{ifname} (No IP) ",
