--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = kitty -e yazi
 $menu = $HOME/.config/rofi/launchers/type-6/launcher.sh
 
 
