fix: comments and refactor exec-once area

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,9 +46,12 @@ $menu = $HOME/.config/rofi/launchers/type-6/launcher.sh
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waypaper --restore & xremap .config/xremap/config.yml
-exec-once = waybar & swaync & hypridle
-exec-once = hyprswitch init --show-title &
+exec-once = waypaper --restore      			# Wallpaper app
+exec-once = xremap .config/xremap/config.yml    # Remap keys
+exec-once = waybar                              # Status bar
+exec-once = swaync                              # Notification Deamon
+exec-once = hypridle                            # Idle manager
+exec-once = hyprswitch init --show-title        # Window switcher
 
 
 #############################
